# snip3-fixed-multisig

./: .gitignore  Cargo.toml  NOTICE  README.md  package.json  polar.config.js
.circleci/: config.yml
artifacts/contracts/: snip3_fixed_multisig.wasm
artifacts/schema/snip3_fixed_multisig/: handle_msg.json
contracts/examples/: schema.rs
contracts/schema/: init_msg.json
contracts/src/: contract.rs  error.rs  query.rs
examples/: schema.rs
schema/: config.json  query_msg.json
scripts/: advance_cron.js  check.js  deploy.js  deploy_mainnet.js  deploy_with_whitelist.js  flow.js  killswitch.js  phase_2_whitelist.json  testnet_cron.js  validator_test_1.js  validator_test_10.js  validator_test_11.js  validator_test_12.js  validator_test_13.js  validator_test_2.js  validator_test_3.js  validator_test_4.js  validator_test_5.js  validator_test_6.js  validator_test_7.js  validator_test_8.js  validator_test_9.js  validators_pulsar.json  validators_supernova.json  whitelist.json
scripts/checkpoints/: staking_contract.yaml  staking_token.yaml
src/: contract.rs  expiration.rs  lib.rs  math.rs  msg.rs  query.rs  state.rs  threshold.rs
test/: deposit.js  withdraw-claim_withSCRT.js  withdraw-claim_withSSCRT.js
tests/: integration.ts
