[package]
name = "snip3-fixed-multisig"
version = "0.1.0"
authors = ["Kent <100624004+kent-3@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "0.10" }
# cosmwasm-beta = { package= "cosmwasm-std", version = "1.0.0-beta6"}
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "0.10" }
secret-toolkit = { version = "0.2.0", features = ["storage"] }
thiserror = { version = "1.0.23" }
# cw3 = "0.13.1"
# cw-storage-plus = "0.13.1"
# cw-utils = "0.13.1"

[dev-dependencies]
cosmwasm-schema = "0.10.1"
